--- a/main/lecture_6/responsive.html
+++ b/main/lecture_6/responsive.html
@@ -35,7 +35,7 @@
                 <a href="" class="bg-black text-white text-center py-2 px-4 w-[20%] rounded-full">click</a>
             </div>
         </div>
-        <div>
+        <div class="md:shrink-0">
             <img src="../lecture_5/images/nature.jpg" alt="" class="h-full w-full shadow-xl shadow-black">
             <div class="flex flex-col gap-4 ">
                 <p class="text-2xl font-bold ">nature</p>
@@ -43,6 +43,8 @@
                 <a href="" class="bg-black text-white text-center py-2 px-4 w-[20%] rounded-full">click</a>
             </div>
         </div>
+
+
 </body>
 
 </html>
