--- a/main/project/index.html
+++ b/main/project/index.html
@@ -5,18 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./webpage.css">
 </head>
 
 <body>
-
     <!-- main page section start -->
-    <main class="h-svh bg-slate-900 relative after:absolute after:content-['fbgvfd'] after:bg-blue-600 after:w-1/3 after:-left-24 after:h-full after:skew-x-12">
-        <!-- <img src="../components/assets/person_1.jpg" alt="profile image" class="h-3/4 rounded-2xl"> -->
-        <!-- <div>
-            <p>I'M CHETAN DAVRA</p>
-            <p>WEB DESIGNER</p>
-        </div> -->
+
+    <main
+        class="h-svh overflow-hidden grid md:grid-cols-2 bg-slate-900 relative after:absolute after:content-[''] after:bg-yellow-400 after:w-1/4 after:-left-24 after:h-full after:skew-x-12">
+        <img src="../components/assets/person_1.jpg" alt="profile image"
+            class="h-[calc(100vh-40px)] rounded-2xl my-auto z-10  mx-[5%]">
+        <div class="z-10 flex justify-center items-start flex-col ">
+
+
+            <div
+                class="relative before:absolute before:content-[''] border-b-4 border-yellow-400  ">
+                <p class="text-5xl ">I'M CHETAN DAVRA</p>
+                <p>WEB DESIGNER</p>
+            </div>
+        </div>
+
     </main>
 
     <!-- main page section end -->
