--- a/main/project/index.html
+++ b/main/project/index.html
@@ -4,8 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Design</title>
+    <title>My Portfolio</title>
+
+    <!-- favicon -->
+
+    <link rel="shortcut icon" href="../components/assets/person_2.jpg" type="image/x-icon">
+
+    <!-- link css file -->
+
     <link rel="stylesheet" href="./webpage.css">
+
+    <!-- remix icon -->
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -15,15 +26,28 @@
         class="h-svh overflow-hidden grid md:grid-cols-2 bg-slate-900 relative after:absolute after:content-[''] after:bg-yellow-400 after:w-1/4 after:-left-24 after:h-full after:skew-x-12">
         <img src="../components/assets/person_1.jpg" alt="profile image"
             class="h-[calc(100vh-40px)] rounded-2xl my-auto z-10  mx-[5%]">
-        <div class="z-10 flex justify-center items-start flex-col ">
+        <div class="z-10 flex justify-center items-start flex-col gap-4">
 
+            <div>
+                <p
+                    class="text-5xl relative before:absolute before:content-[''] before:w-1/12 before:rounded-xl  before:h-2 before:top-6 before:-left-20 before:bg-yellow-400 text-yellow-400 font-bold mb-2">
+                    I'M
+                    CHETAN DAVRA.</p>
+                <p class="text-5xl text-white font-bold">WEB DESIGNER</p>
 
-            <div
-                class="relative before:absolute before:content-[''] border-b-4 border-yellow-400  ">
-                <p class="text-5xl ">I'M CHETAN DAVRA</p>
-                <p>WEB DESIGNER</p>
+            </div>
+
+            <p class="text-white">I'm a Indian based web designer & front-end developer focused on crafting clean &
+                user-friendly
+                experiences, I am passionate about building excellent software that improves the lives of those around
+                me.</p>
+
+            <div class="border-2 rounded-full py-2 px-4">
+                <a href="">MORE ABOUTME</a>
+                <i class="ri-arrow-right-line"></i>
             </div>
         </div>
+
 
     </main>
 
