--- a/main/project/index.html
+++ b/main/project/index.html
@@ -56,15 +56,101 @@
 
             <div
                 class="relative before:top-0 before:left-0 before:absolute before:content-[''] border-2 before:bg-yellow-400 rounded-full before:rounded-full before:w-full before:h-full before:translate-x-full hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden">
-                <a href="" class="relative z-50 px-4 py-4 font-bold text-lg text-white">MORE ABOUTME</a>
+                <a href="" class="relative z-50 px-4 py-4 font-bold lg:text-lg text-white  text-sm">MORE ABOUTME</a>
                 <i
-                    class="inline-block relative ri-arrow-right-line z-50 bg-yellow-400 px-4 py-3 rounded-full text-2xl text-white"></i>
+                    class="inline-block relative ri-arrow-right-line z-50 bg-yellow-400 px-4 py-3 rounded-full lg:text-2xl  text-sm text-white"></i>
             </div>
         </div>
 
     </main>
 
+    <br>
     <!-- main page section end -->
+
+
+    <!-- About Section start -->
+
+    <div>
+        <!-- about main div start-->
+
+        <!-- resume text section start -->
+
+        <div
+            class="flex justify-center items-center md:items-center text-opacity-0 md:text-opacity-100  relative h-8 bg-slate-700 md:bg-inherit w-full md:text-9xl  text-slate-800 font-bold my-[5%]">
+            RESUME
+            <div class="absolute top-0    text-sm md:text-5xl text-white">
+                ABOUT<span class="text-yellow-400">ME</span>
+            </div>
+        </div>
+        <!-- resume text section end -->
+
+
+        <!-- personal Info section start -->
+
+        <br>
+        <div class="m-[5%]">
+            <p class="text-2xl font-bold text-slate-400">
+                Personal Info
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2  gap-4 mt-4 font-bold text-slate-400">
+
+                <div class="grid grid-cols-2 leading-10 ">
+                    <div class="text-slate-400">
+                        <p>First Name : <span class="text-white">Chetan</span></p>
+                        <p>Last Name : <span class="text-white">Davra</span></p>
+                        <p>Age : <span class="text-white">22</span></p>
+                        <p>Nationality : <span class="text-white"></span></p>
+                        <p>Freelance : <span class="text-white"></span></p>
+                    </div>
+                    <div class="text-slate-400">
+                        <p>Address : <span class="text-white">surat</span></p>
+                        <p>Phone : <span class="text-white">+91 ..... .....</span></p>
+                        <p>Email : <span class="text-white">email@gmail.com</span></p>
+                        <p>Skype : <span class="text-white">chetan.davra</span></p>
+                        <p>Language : <span class="text-white">Gujarati,Hindi,English</span></p>
+
+                    </div>
+                </div>
+                <div class="grid grid-cols-2 gap-4">
+
+                    <div class="border flex gap-4 flex-col border-slate-400 p-4 w-full">
+                        <p class="text-6xl text-yellow-400">12<sup>+</sup></p>
+                        <p
+                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
+                            YEARS OF <br> EXPERIENCE</p>
+                    </div>
+
+                    <div class="border flex gap-4 flex-col border-slate-400 p-4 w-full">
+                        <p class="text-6xl text-yellow-400">97<sup>+</sup></p>
+                        <p
+                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
+                            COMPLETED <br> PROJECTS</p>
+                    </div>
+
+                    <div class="border flex gap-4 flex-col border-slate-400 p-4 w-full">
+                        <p class="text-6xl text-yellow-400">81<sup>+</sup></p>
+                        <p
+                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
+                            HAPPY <br> CUSTOMERS</p>
+                    </div>
+
+                    <div class="border flex gap-4 flex-col border-slate-400 p-4 w-full">
+                        <p class="text-6xl text-yellow-400">53<sup>+</sup></p>
+                        <p
+                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
+                            AWARDS WON</p>
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+        <!-- personal Info section end -->
+        <!-- about main div end-->
+    </div>
+
+    <!-- About Section end -->
 </body>
 
 </html>
