--- a/main/project/index.html
+++ b/main/project/index.html
@@ -55,18 +55,16 @@
                 me.</p>
 
             <div
-                class="relative before:top-0 before:left-0 before:absolute before:content-[''] border-2 border-yellow-400 before:bg-yellow-400 rounded-full before:rounded-full before:w-full before:h-full before:translate-x-full hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden ">
-                <a href="" class="relative z-50 px-4 py-4 font-bold lg:text-lg text-white  text-sm">MORE ABOUTME</a>
+                class="relative before:top-0 before:left-0 before:absolute before:content-[''] border-2 before:bg-yellow-400 rounded-full before:rounded-full before:w-full before:h-full before:translate-x-full hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden">
+                <a href="" class="relative z-50 px-4 py-4 font-bold text-lg text-white">MORE ABOUTME</a>
                 <i
-                    class="inline-block relative ri-arrow-right-line z-50 bg-yellow-400 px-4 py-3 rounded-full lg:text-2xl  text-sm text-white"></i>
+                    class="inline-block relative ri-arrow-right-line z-50 bg-yellow-400 px-4 py-3 rounded-full text-2xl text-white"></i>
             </div>
         </div>
 
     </main>
 
-    <br>
     <!-- main page section end -->
-
 
     <!-- About Section start -->
 
@@ -76,9 +74,9 @@
         <!-- resume text section start -->
 
         <div
-            class="flex justify-center items-center md:items-center text-opacity-0 md:text-opacity-100  relative h-8 bg-slate-700 md:bg-inherit w-full md:text-9xl  text-slate-800 font-bold my-[5%]">
+            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[5%] w-full h-8 font-bold text-slate-800 md:text-9xl text-opacity-0 md:text-opacity-100">
             RESUME
-            <div class="absolute top-0    text-sm md:text-5xl text-white">
+            <div class="top-0 absolute text-sm text-white md:text-5xl">
                 ABOUT<span class="text-yellow-400">ME</span>
             </div>
         </div>
@@ -88,14 +86,16 @@
         <!-- personal Info section start -->
 
         <br>
-        <div class="m-[5%] ">
+        <div class="m-[5%]">
 
-            <div class="flex flex-col md:flex-row  justify-around items-center  gap-4 mt-4 font-bold text-slate-400">
-                <div class="w-full">
-                    <p class="text-2xl font-bold text-slate-400">
+            <div class="flex md:flex-row flex-col justify-around items-center gap-4 mt-4 font-bold text-slate-400">
+
+                <div class="flex flex-col gap-4 md:m-0 mb-8 w-full">
+
+                    <p class="font-bold text-3xl text-slate-400 uppercase">
                         Personal Info
                     </p>
-                    <div class="grid grid-cols-2 leading-10 ">
+                    <div class="grid grid-cols-2 leading-10">
                         <div class="text-slate-400">
                             <p>First Name : <span class="text-white">Chetan</span></p>
                             <p>Last Name : <span class="text-white">Davra</span></p>
@@ -113,42 +113,45 @@
                         </div>
                     </div>
                     <div
-                        class="border-2 border-yellow-400 rounded-full relative before:absolute before:content-[''] before:h-full before:w-full before:bg-yellow-400 before:rounded-full before:top-0 before:left-0 inline-block  before:translate-x-full  hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden">
-                        <a href="" class=" px-4 z-50 relative text-white font-bold">DOWNLOAD CV</a>
+                        class="inline-block relative before:top-0 before:left-0 before:absolute before:content-[''] border-2 border-yellow-400 before:bg-yellow-400 rounded-full before:rounded-full w-fit before:w-full before:h-full before:translate-x-full hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden">
+
+                        <a href="" class="relative z-50 px-4 font-bold text-white">DOWNLOAD CV</a>
+
                         <i
-                            class="ri-download-2-fill text-white font-bold z-50 relative inline-block py-3 px-4 rounded-full bg-yellow-400"></i>
+                            class="inline-block relative z-50 bg-yellow-400 px-4 py-3 rounded-full font-bold text-white ri-download-2-fill"></i>
                     </div>
                 </div>
-                <div class="grid grid-cols-2 gap-4 w-full">
+                <div class="gap-4 grid grid-cols-2 w-full">
 
-                    <div class="border flex gap-4 flex-col border-slate-400 p-4">
+                    <div class="flex flex-col gap-4 border-slate-400 p-8 border">
                         <p class="text-6xl text-yellow-400">12<sup>+</sup></p>
                         <p
-                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
-                            YEARS OF <br> EXPERIENCE</p>
+                            class="relative before:top-3 left-12 before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[10%] before:h-[1px]">
+                            YEARS OF
+                            <span class="">EXPERIENCE</span>
+                        </p>
                     </div>
 
-                    <div class="border flex gap-4 flex-col border-slate-400 p-4 ">
+                    <div class="flex flex-col gap-4 border-slate-400 p-8 border">
                         <p class="text-6xl text-yellow-400">97<sup>+</sup></p>
                         <p
-                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
-                            COMPLETED <br> PROJECTS</p>
+                            class="relative before:top-3 left-12 before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[10%] before:h-[1px] text-wrap object-cover">
+                            COMPLETED <span> PROJECTS</span></p>
                     </div>
 
-                    <div class="border flex gap-4 flex-col border-slate-400 p-4 ">
+                    <div class="flex flex-col gap-4 border-slate-400 p-8 border">
                         <p class="text-6xl text-yellow-400">81<sup>+</sup></p>
                         <p
-                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
-                            HAPPY <br> CUSTOMERS</p>
+                            class="relative before:top-3 left-12 before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[10%] before:h-[1px] text-wrap">
+                            HAPPY <span> CUSTOMERS</span></p>
                     </div>
 
-                    <div class="border flex gap-4 flex-col border-slate-400 p-4">
+                    <div class="flex flex-col gap-4 border-slate-400 p-8 border">
                         <p class="text-6xl text-yellow-400">53<sup>+</sup></p>
                         <p
-                            class="relative text-wrap  left-12 before:content-[''] before:absolute before:w-[10%] before:h-[1px] before:bg-white before:top-3 before:-left-10">
+                            class="relative before:top-3 left-12 before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[10%] before:h-[1px] text-wrap">
                             AWARDS WON</p>
                     </div>
-
 
                 </div>
             </div>
@@ -162,8 +165,6 @@
     </div>
 
     <!-- About Section end -->
-
-    <!--  -->
 </body>
 
 </html>
