--- a/main/project/index.html
+++ b/main/project/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
 
+    <!-- https://preview.themeforest.net/item/tunis-tailwind-css-personal-portfolio-react-nextjs-template/full_screen_preview/50399681?_ga=2.75303890.1786979114.1718896056-75415726.1713948407 -->
+
     <!-- favicon -->
 
     <link rel="shortcut icon" href="../components/assets/person_2.jpg" type="image/x-icon">
@@ -68,7 +70,7 @@
 
     <!-- About Section start -->
 
-    <div class="flex flex-col gap-[10%]">
+    <div class="w-[90%] m-auto flex flex-col gap-[10%]">
         <!-- about main div start-->
 
         <!-- resume text section start -->
@@ -127,32 +129,32 @@
                 <div class="gap-4 grid grid-cols-2 w-full">
 
                     <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
-                        <p class="text-6xl text-yellow-400">12<sup>+</sup></p>
+                        <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">12<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] ">
+                            class="relative text-sm md:text-l md:text-[17px]  before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] ">
                             YEARS OF
                             <span class="">EXPERIENCE</span>
                         </p>
                     </div>
 
                     <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
-                        <p class="text-6xl text-yellow-400">97<sup>+</sup></p>
+                        <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">97<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap object-cover">
+                            class="relative text-sm md:text-[17px]  before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap object-cover">
                             COMPLETED <span> PROJECTS</span></p>
                     </div>
 
                     <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
-                        <p class="text-6xl text-yellow-400">81<sup>+</sup></p>
+                        <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">81<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
+                            class="relative text-sm md:text-[17px]  before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
                             HAPPY <span> CUSTOMERS</span></p>
                     </div>
 
-                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
-                        <p class="text-6xl text-yellow-400">53<sup>+</sup></p>
+                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border text-wrap">
+                        <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">53<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
+                            class="relative text-sm md:text-[17px] before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
                             AWARDS WON</p>
                     </div>
 
@@ -170,13 +172,13 @@
         <div class="">
             <p class="uppercase text-center font-bold text-xl sm:text-2xl md:text-3xl lg:text-4xl text-white my-[5%]">my
                 skills</p>
-            <div class="grid h-full m-auto grid-cols-2 md:grid-cols-3  lg:grid-cols-4 lg:grid-rows-2 w-[90%] gap-16">
+            <div class="grid h-full m-auto grid-cols-2 md:grid-cols-4  lg:grid-cols-4 lg:grid-rows-2 w-[90%] gap-16">
 
                 <!-- html -->
 
-                <div class=" flex flex-col justify-center items-center ">
+                <div class=" flex flex-col justify-center items-center  ">
 
-                    <div class="flex justify-center items-center grad relative h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['90%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['90%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:90%; ">
 
                     </div>
@@ -187,7 +189,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['85%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['85%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px]1 before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:85%; ">
 
                     </div>
@@ -199,7 +201,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['80%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['80%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:80%; ">
 
                     </div>
@@ -210,7 +212,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['90%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['90%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:90%; ">
 
                     </div>
@@ -221,7 +223,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['50%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['50%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:50%; ">
 
                     </div>
@@ -232,7 +234,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative border-2 border-yellow-400 h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['0%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative border-2 border-yellow-400 h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full  bg-slate-900 before:absolute before:content-['0%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:0%; ">
 
                     </div>
@@ -243,7 +245,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad border-2 border-yellow-400 relative h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['0%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad border-2 border-yellow-400 relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['0%'] before:flex before:justify-center before:items-center  before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:0%; ">
 
                     </div>
@@ -254,7 +256,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[200px] rounded-full  w-[200px] bg-slate-900 before:absolute before:content-['20%'] before:flex before:justify-center before:items-center  before:h-[180px] before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['20%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:20%; ">
 
                     </div>
